fix: text wrap long words

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,6 +32,10 @@ body {
   }
 }
 
+.reactMarkDown {
+  word-break: break-word;
+}
+
 .reactMarkDown ul {
   margin-top: 1em;
   margin-bottom: 1em;
